--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Web Developer</title>
+    <title>Zaid Danish - Embedded Hardware and Software</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -23,16 +23,19 @@
 
     <!-- Hero Section -->
     <section id="home">
-        <h1>Your Name</h1>
-        <p>Web Developer & Embedded Engineer</p>
+        <h1>Zaid Danish</h1>
+        <p>Embedded Hardware Engineer & Web Developer</p>
+        <br>
     </section>
 
     <!-- About Section -->
     <section id="about">
         <h2>About Me</h2>
-        <p>Write about your professional background and career goals here.</p>
+        <p>Embedded Hardware Engineer with a Passion for Both Software and Hardware</p>
+        <p>Making Things That Just Works!</p>
         <a href="resume.pdf" download>Download Resume</a>
-    </section>
+        <br>
+    </sectio>
 
     <!-- Skills Section -->
     <section id="skills">
@@ -44,6 +47,7 @@
             <li>Node.js</li>
             <li>Python</li>
         </ul>
+        <br>
     </section>
 
     <!-- Projects Section -->
@@ -54,12 +58,14 @@
             <p>Project description goes here.</p>
             <a href="project-link">View Project</a>
         </div>
+        <br>
     </section>
 
     <!-- Blog Section -->
     <section id="blog">
         <h2>Blog</h2>
         <p>Coming soon...</p>
+        <br>
     </section>
 
     <!-- Contact Section -->
@@ -78,10 +84,10 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>&copy; 2024 Zaid Danish. All rights reserved.</p>
         <ul>
-            <li><a href="https://linkedin.com">LinkedIn</a></li>
-            <li><a href="https://github.com">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/zaiddanish/">LinkedIn</a></li>
+            <li><a href="https://github.com/zaiddanish96">GitHub</a></li>
         </ul>
     </footer>
 
