--- a/index.html
+++ b/index.html
@@ -1,96 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zaid Danish - Embedded Hardware and Software</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Name - Portfolio</title>
+  <link rel="stylesheet" href="style.css"> </head>
 <body>
-    <!-- Header -->
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#blog">Blog</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <h1><a href="#">Your Name</a></h1>
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <!-- Hero Section -->
-    <section id="home">
-        <h1>Zaid Danish</h1>
-        <p>Embedded Hardware Engineer & Web Developer</p>
-        <br>
-    </section>
-
-    <!-- About Section -->
+  <main>
     <section id="about">
-        <h2>About Me</h2>
-        <p>Embedded Hardware Engineer with a Passion for Both Software and Hardware</p>
-        <p>Making Things That Just Works!</p>
-        <a href="resume.pdf" download>Download Resume</a>
-        <br>
-    </sectio>
+      <h2>About Me</h2>
+      <p>Write a short introduction about yourself, your career goals, and your experience.</p>
+      <a href="resume.pdf" download>Download Resume</a>
+    </section>
 
-    <!-- Skills Section -->
     <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>JavaScript</li>
-            <li>HTML & CSS</li>
-            <li>React</li>
-            <li>Node.js</li>
-            <li>Python</li>
+      <h2>Skills</h2>
+      <ul>
+        <li>Skill 1</li>
+        <li>Skill 2</li>
+        <li>Skill 3</li>
         </ul>
-        <br>
     </section>
 
-    <!-- Projects Section -->
     <section id="projects">
-        <h2>Projects</h2>
-        <div class="project">
-            <h3>Project Title</h3>
-            <p>Project description goes here.</p>
-            <a href="project-link">View Project</a>
-        </div>
-        <br>
-    </section>
+      <h2>Projects</h2>
+      <div class="project-card">
+        <h3>Project Title 1</h3>
+        <p>A brief description of your project 1. Include links to live demos or code repositories if available.</p>
+        <a href="#">View Project</a>
+      </div>
+      </section>
 
-    <!-- Blog Section -->
-    <section id="blog">
-        <h2>Blog</h2>
-        <p>Coming soon...</p>
-        <br>
-    </section>
-
-    <!-- Contact Section -->
     <section id="contact">
-        <h2>Contact</h2>
-        <form>
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" required></textarea>
-            <button type="submit">Send</button>
-        </form>
+      <h2>Contact</h2>
+      <p>Write your contact information, including email address, phone number (optional), or links to social media profiles.</p>
+      <form action="mailto:youremail@example.com">
+        <label for="name">Your Name:</label>
+        <input type="text" id="name" required>
+        <label for="email">Your Email:</label>
+        <input type="email" id="email" required>
+        <label for="message">Message:</label>
+        <textarea id="message" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
     </section>
+  </main>
 
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2024 Zaid Danish. All rights reserved.</p>
-        <ul>
-            <li><a href="https://www.linkedin.com/in/zaiddanish/">LinkedIn</a></li>
-            <li><a href="https://github.com/zaiddanish96">GitHub</a></li>
-        </ul>
-    </footer>
-
-    <script src="script.js"></script>
+  <footer>
+    <p>&copy; 2024 Your Name</p>
+  </footer>
 </body>
 </html>
