new file:   contact.html 	modified:   index.html 	new file:   projects.html

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your Name - Portfolio</title>
-  <link rel="stylesheet" href="style.css"> </head>
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
   <header>
     <h1><a href="#">Your Name</a></h1>
     <nav>
       <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -25,36 +25,18 @@
       <a href="resume.pdf" download>Download Resume</a>
     </section>
 
-    <section id="skills">
-      <h2>Skills</h2>
-      <ul>
-        <li>Skill 1</li>
-        <li>Skill 2</li>
-        <li>Skill 3</li>
-        </ul>
-    </section>
-
-    <section id="projects">
-      <h2>Projects</h2>
+    <section id="featured-projects">
+      <h2>Featured Projects</h2>
       <div class="project-card">
         <h3>Project Title 1</h3>
         <p>A brief description of your project 1. Include links to live demos or code repositories if available.</p>
         <a href="#">View Project</a>
       </div>
-      </section>
-
-    <section id="contact">
-      <h2>Contact</h2>
-      <p>Write your contact information, including email address, phone number (optional), or links to social media profiles.</p>
-      <form action="mailto:youremail@example.com">
-        <label for="name">Your Name:</label>
-        <input type="text" id="name" required>
-        <label for="email">Your Email:</label>
-        <input type="email" id="email" required>
-        <label for="message">Message:</label>
-        <textarea id="message" required></textarea>
-        <button type="submit">Send Message</button>
-      </form>
+      <div class="project-card">
+        <h3>Project Title 2</h3>
+        <p>A brief description of your project 2. Include links to live demos or code repositories if available.</p>
+        <a href="#">View Project</a>
+      </div>
     </section>
   </main>
 
