modified:   contact.html 	modified:   index.html 	modified:   projects.html 	new file:   style.css

--- a/contact.html
+++ b/contact.html
@@ -4,21 +4,80 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your Name - Contact</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-0svjQEgQWgOLaXXp6ghvsgCSNeQyVjJ4uHKgombiqcG85t4xmTpLt7Fyw6jy7C0C" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1><a href="index.html">Your Name</a></h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">About</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
+
+  <header class="header bg-light">
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="index.html">Your Name</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ms-auto">
+            <a class="nav-link" href="index.html">About</a>
+            <a class="nav-link" href="projects.html">Projects</a>
+            <a class="nav-link active" href="#">Contact</a>
+          </div>
+        </div>
+      </nav>
+    </div>
   </header>
 
-  <main>
+  <main class="container py-5">
     <section id="contact">
-      <h2>Contact Me</h2>
-      <p>Write your contact information, including email address
+      <h2>Get in Touch</h2>
+      <p>Feel free to send me a message using the form below. I'm always happy to connect and discuss new opportunities.</p>
+      <form id="contactForm" method="post" action="your-email@example.com">  <div class="row">
+          <div class="col-md-6 mb-3">
+            <label for="name" class="form-label">Your Name</label>
+            <input type="text" class="form-control" id="name" name="name" required>
+          </div>
+          <div class="col-md-6 mb-3">
+            <label for="email" class="form-label">Email Address</label>
+            <input type="email" class="form-control" id="email" name="email" required>
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="company" class="form-label">Company (Optional)</label>
+          <input type="text" class="form-control" id="company" name="company">
+        </div>
+        <div class="mb-3">
+          <label for="message" class="form-label">Message</label>
+          <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Send Message</button>
+      </form>
+    </section>
+  </main>
+
+  <footer class="footer mt-5 py-3 bg-light text-center">
+    <p>&copy; 2024 Your Name</p>
+    <ul class="social-links list-unstyled d-flex justify-content-center mb-0">
+      <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+      <li><a href="#"><i class="fab fa-github"></i></a></li>
+      <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+    </ul>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-boQlYzfxj6SKRVzGUAoCdZFKwfQy/j1AN3yQJJxVecycwTXaPLjh7swi/qfwSXUjOm" crossorigin="anonymous"></script>
+  <script>
+    // Form validation (optional)
+    const form = document.getElementById('contactForm');
+    form.addEventListener('submit', function(event) {
+      if (!form.checkValidity()) {
+        event.preventDefault();
+        event.stopPropagation();
+        form.classList.add('was-validated');
+      } else {
+        // Handle successful form submission (e.g., display success message)
+        alert('Your message has been sent successfully!');
+      }
+    });
+  </script>
+</body>
+</html>
+
