--- a/projects.html
+++ b/projects.html
@@ -5,31 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your Name - Projects</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-0svjQEgQWgOLaXXp6ghvsgCSNeQyVjJ4uHKgombiqcG85t4xmTpLt7Fyw6jy7C0C" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css"> </head>
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
-  <header>
-    <h1><a href="index.html">Your Name</a></h1>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <li class="nav-item">
+
+  <header class="header bg-light">
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="index.html">Your Name</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ms-auto">
             <a class="nav-link" href="index.html">About</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Projects</a>
-          </li>
-          <li class="nav-item">
+            <a class="nav-link active" href="#">Projects</a>
             <a class="nav-link" href="contact.html">Contact</a>
-          </li>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </div>
   </header>
 
-  <main>
+  <main class="container py-5">
     <section id="all-projects">
       <h2>My Projects</h2>
       <p>Welcome to my project portfolio! Here's a collection of projects showcasing my skills and experience.</p>
@@ -56,14 +54,15 @@
     </section>
   </main>
 
-  <footer>
+  <footer class="footer mt-5 py-3 bg-light text-center">
     <p>&copy; 2024 Your Name</p>
-    <ul class="social-links">
+    <ul class="social-links list-unstyled d-flex justify-content-center mb-0">
       <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
       <li><a href="#"><i class="fab fa-github"></i></a></li>
       <li><a href="#"><i class="fab fa-twitter"></i></a></li>
     </ul>
   </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-boQlYzfxj6SKRVzGUAoCdZFKwfQy/j1AN3yQJJxVecycwTXaPLjh7swi/qfwSXUjOm" crossorigin="anonymous"></script>
 </body>
 </html>
