--- a/projects.html
+++ b/projects.html
@@ -9,20 +9,28 @@
 </head>
 <body>
 
-  <header class="header bg-light">
-    <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="index.html">Hi, I'm Zaid Danish</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+  <header class="header">
+    <div class="header-container">
+      <nav class="navigation">
+        <a href="index.html" class="logo">Hi, I'm Zaid Danish</a>
+        <ul class="nav-links">
+          <!-- <li><a href="index.html">About Me</a></li> class="active"  -->
+          <li><a href="#projects.html">Projects</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <button class="nav-toggle" aria-label="Toggle navigation">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+
+        <!-- <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
             <a class="nav-link" href="index.html">About</a>
             <a class="nav-link active" href="#">Projects</a>
             <a class="nav-link" href="contact.html">Contact</a>
           </div>
-        </div>
+        </div> -->
       </nav>
     </div>
   </header>
