modified:   contact.html 	modified:   index.html 	modified:   projects.html 	modified:   style.css

--- a/projects.html
+++ b/projects.html
@@ -11,26 +11,21 @@
 
   <header class="header">
     <div class="header-container">
-      <nav class="navigation">
         <a href="index.html" class="logo">Hi, I'm Zaid Danish</a>
-        <ul class="nav-links">
-          <!-- <li><a href="index.html">About Me</a></li> class="active"  -->
-          <li><a href="#projects.html">Projects</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-        <button class="nav-toggle" aria-label="Toggle navigation">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </button>
-
-        <!-- <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ms-auto">
-            <a class="nav-link" href="index.html">About</a>
-            <a class="nav-link active" href="#">Projects</a>
-            <a class="nav-link" href="contact.html">Contact</a>
-          </div>
-        </div> -->
+    </div>
+    
+    <div class="header-navigation">
+      <nav class="navigation"></nav>
+      <ul class="nav-links">
+        <!-- <li><a href="#about">About Me</a></li> class="active"  -->
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+      <button class="nav-toggle" aria-label="Toggle navigation">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </button>
       </nav>
     </div>
   </header>
@@ -62,13 +57,18 @@
     </section>
   </main>
 
-  <footer class="footer mt-5 py-3 bg-light text-center">
-    <p>&copy; 2024 Your Name</p>
-    <ul class="social-links list-unstyled d-flex justify-content-center mb-0">
-      <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-      <li><a href="#"><i class="fab fa-github"></i></a></li>
-      <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+  <footer class="footer">
+    <p>&copy; 2024 Zaid Danish</p>
+    <ul class="nav-links">
+      <li><a href="https://www.linkedin.com/in/zaiddanish/">LinkedIn<i class="fab fa-linkedin"></i></a></li>
+      <li><a href="#">github<i class="fab fa-github"></i></a></li>
+      <li><a href="#">twidder<i class="fab fa-twitter"></i></a></li>
     </ul>
+    <button class="nav-toggle" aria-label="Toggle navigation">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </button>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-boQlYzfxj6SKRVzGUAoCdZFKwfQy/j1AN3yQJJxVecycwTXaPLjh7swi/qfwSXUjOm" crossorigin="anonymous"></script>
