--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,15 @@
 <body>
 
   <header class="header">
-    <nav class="navigation">
-      <a href="index.html" class="logo">Hi, I'm Zaid Danish</a>
+    <div class="header-container">
+        <a href="index.html" class="logo">Hi, I'm Zaid Danish</a>
+    </div>
+    
+    <div class="header-navigation">
+      <nav class="navigation"></nav>
       <ul class="nav-links">
-        <!-- <li><a href="index.html">About Me</a></li> class="active"  -->
-        <li><a href="#projects.html">Projects</a></li>
+        <!-- <li><a href="#about">About Me</a></li> class="active"  -->
+        <li><a href="projects.html">Projects</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
       <button class="nav-toggle" aria-label="Toggle navigation">
@@ -21,6 +25,8 @@
         <span class="bar"></span>
         <span class="bar"></span>
       </button>
+      </nav>
+    </div>
   </header>
 
   <main class="container py-5">
@@ -56,13 +62,18 @@
     </section>
   </main>
 
-  <footer class="footer mt-5 py-3 bg-light text-center">
-    <p>&copy; 2024 Your Name</p>
-    <ul class="social-links list-unstyled d-flex justify-content-center mb-0">
-      <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-      <li><a href="#"><i class="fab fa-github"></i></a></li>
-      <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+  <footer class="footer">
+    <p>&copy; 2024 Zaid Danish</p>
+    <ul class="nav-links">
+      <li><a href="https://www.linkedin.com/in/zaiddanish/">LinkedIn<i class="fab fa-linkedin"></i></a></li>
+      <li><a href="#">github<i class="fab fa-github"></i></a></li>
+      <li><a href="#">twidder<i class="fab fa-twitter"></i></a></li>
     </ul>
+    <button class="nav-toggle" aria-label="Toggle navigation">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </button>
   </footer>
 
   <script>
