--- a/index.html
+++ b/index.html
@@ -10,25 +10,28 @@
 
   <header class="header">
     <div class="header-container">
-      <nav class="navigation">
         <a href="#" class="logo">Hi, I'm Zaid Danish</a>
-        <ul class="nav-links">
-          <!-- <li><a href="#about">About Me</a></li> class="active"  -->
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-        <button class="nav-toggle" aria-label="Toggle navigation">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </button>
+    </div>
+
+    <div class="header-navigation">
+      <nav class="navigation"></nav>
+      <ul class="nav-links">
+        <!-- <li><a href="#about">About Me</a></li> class="active"  -->
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+      <button class="nav-toggle" aria-label="Toggle navigation">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </button>
       </nav>
     </div>
   </header>
 
   <main class="container">
     <section id="hero" class="hero">
-      <h2>Hero section</h2>
+      <h2>Hero Section</h2>
       <p>image and quote here</p>
     </section>
 
@@ -46,7 +49,7 @@
   <footer class="footer">
     <p>&copy; 2024 Zaid Danish</p>
     <ul class="nav-links">
-      <li><a href="#">LinkedIn<i class="fab fa-linkedin"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/zaiddanish/">LinkedIn<i class="fab fa-linkedin"></i></a></li>
       <li><a href="#">github<i class="fab fa-github"></i></a></li>
       <li><a href="#">twidder<i class="fab fa-twitter"></i></a></li>
     </ul>
