--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <header class="header">
     <div class="header-container">
-        <a href="#" class="logo">Hi, I'm Zaid Danish</a>
+        <a href="#" class="logo">Hi, I'm Zaid Danish!</a>
     </div>
 
     <div class="header-navigation">
