--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <header class="header">
     <div class="header-container">
-        <a href="#" class="logo">Hi, I'm Zaid Danish!</a>
+        <a href="#" class="logo">Hi, I'm Zaid Danish</a>
     </div>
 
     <div class="header-navigation">
@@ -34,15 +34,23 @@
       <h2>Hero Section</h2>
       <p>image and quote here</p>
     </section>
+    <br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br>
+
+    <section id="featured-projects">
+      <h2>Featured Projects</h2>
+    </section>
+    <br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br>
 
     <section id="about">
       <h2>About Me</h2>
       <p>Introduce yourself and your skills here. Highlight your experience and achievements.</p>
     </section>
+    <br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br>
 
-    <section id="featured-projects">
-      <h2>Featured Projects</h2>
-    </section>
+
 
   </main>
 
